아 너무 재밌고 할거 많고 힘들다

--- a/trip_planner_front/public/index.html
+++ b/trip_planner_front/public/index.html
@@ -43,5 +43,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=6bae7bbc8850cc6de885e8de957d630d&libraries=services"></script>
   </body>
 </html>
