예약 페이지 결제완료

--- a/trip_planner_front/public/index.html
+++ b/trip_planner_front/public/index.html
@@ -29,6 +29,7 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
+    <script src="https://cdn.iamport.kr/v1/iamport.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -43,6 +44,9 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=6bae7bbc8850cc6de885e8de957d630d&libraries=services"></script>
+    <script
+      type="text/javascript"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=6bae7bbc8850cc6de885e8de957d630d&libraries=services"
+    ></script>
   </body>
 </html>
